--- a/indexxxx.html
+++ b/indexxxx.html
@@ -10,6 +10,61 @@
 </head>
 
 <body>
+    <section class="skip">
+        <div class="diet">
+            <h1><span class="color">Skip</span> The diet ,</h1>
+            <h1>Just eat healthy food with food Network</h1>
+            <p> food is life . food is hunger.food is everything</p>
+
+            <a class="link button" href="">Order Food</a>
+
+
+
+        </div>
+        <div class="imgone">
+            <img class="imagee" src="images/female/Group 8425.png" alt="">
+        </div>
+
+
+
+
+    </section>
+    <section class="about">
+        <div class="inabout">
+            <h1>About Me</h1>
+            <p>i want to eat good food everyday. food helps us to live.
+                food helps us to work
+            </p>
+        </div>
+        <div class="imgtwo">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <a class="contact" href="">contact </a>
+
+    </section>
+    <section class="recepies">
+        <h1>My Recepies</h1>
+        <p>i can cook egg i can make tea</p>
+        <div class="recone">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <p>this is a good food</p>
+
+        </div>
+        <div class="rectwo">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <p>this is a great food
+                its really tasty
+            </p>
+        </div>
+        <div>
+            <img src="images/food/Project Cover4.png" alt="">
+            <p>this is another great food from bangladesh</p>
+        </div>
+
+
+
+    </section>
+
 
 </body>
 
