--- a/indexxxx.html
+++ b/indexxxx.html
@@ -39,7 +39,7 @@
         <div class="imgtwo">
             <img src="images/female/Person Image.png" alt="">
         </div>
-        <a class="contact" href="">contact </a>
+        <a class="linkbutton" href="">contact </a>
 
     </section>
     <section class="recepies">
